@@ -2,6 +2,7 @@
 next
 ----
 - "sounds:play" now returns handle & sound file name string
+- added "sounds:stop" wrapper function for "core:sound_stop"
 
 
 v1.8
